# AI

./: Cargo.toml
src/: ai.rs  main.rs
src/ai/: chat.rs  mod.rs
src/ai/memory/: embeddings.rs  mod.rs  sql_memory.rs
